--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
 		<a class="icon" href="mailto:hello@alisonlee.co"><div class="icon" id="contact"></div></a>
 	</div>
 	<div class="content">
-		<p class="content-text">I've just graduated from the <a href="http://www.design.yorku.ca">York/Sheridan Bachelor of Design Honours</a> program. Woohoo!</p>
-		<p class="content-text">In addition to that, I've also recently interned at <a href="http://www.iscreativestudio.com">IS Creative Studio</a> and was also a designer for a <a href="index#Wordplay">Chinese startup</a>, creating illustrative and typographic images for an English-learning book for children.</p>
+		<p class="content-text">I've just graduated from the <a href="http://www.design.yorku.ca" target="_blank">York/Sheridan Bachelor of Design Honours</a> program. Woohoo!</p>
+		<p class="content-text">In addition to that, I've also recently interned at <a href="http://www.iscreativestudio.com" target="_blank">IS Creative Studio</a> and was also a designer for a <a href="index#Wordplay" target="_blank">Chinese startup</a>, creating illustrative and typographic images for an English-learning book for children.</p>
 		<p class="content-text">I'm currently looking for internship or full time opportunities for Summer and Fall 2015. Let's get in touch!</p>
 	</div>
 
