Changed index link

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 	<div class="sidebar">
 		<a href="http://alisonlee.co"><img class="logo" src="assets/img/logo.png"></a>
 		<a class="icon" href="about"><div class="icon curpage" id="about"></div></a>
-		<a class="icon" href="/"><div class="icon" id="work"></div></a>
+		<a class="icon" href="index"><div class="icon" id="work"></div></a>
 		<a class="icon" href="mailto:hello@alisonlee.co"><div class="icon" id="contact"></div></a>
 	</div>
 	<div class="content">
