Changed JavaScript attribute from async to defer

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<link href="assets/img/favicon.ico" rel="icon"/>
 	<link href="style.css" rel="stylesheet" type="text/css" />
-	<script async type="text/javascript" src="jquery-1.11.2.js"></script>
-	<script async type="text/javascript" src="work-script.js"></script>
+	<script type="text/javascript" src="jquery-1.11.2.js" defer></script>
+	<script type="text/javascript" src="work-script.js" defer></script>
 	<title>Alison Lee</title>
 </head>
 <body>
